Removed preference file links
Eclipse does not seem to like symbolic links for preference files. And it
might cause additional problems under Windows. So now there are real files
that must be updated manually.

--- a/org.atomictagging.core/.settings/org.eclipse.pde.core.prefs
+++ b/org.atomictagging.core/.settings/org.eclipse.pde.core.prefs
@@ -1,1 +1,4 @@
-../../settings/org.eclipse.pde.core.prefs
+#Sat Mar 13 20:56:05 CET 2010
+eclipse.preferences.version=1
+pluginProject.extensions=false
+resolve.requirebundle=false
