--- a/org.atomictagging.shell/.settings/org.eclipse.core.resources.prefs
+++ b/org.atomictagging.shell/.settings/org.eclipse.core.resources.prefs
@@ -1,1 +1,3 @@
-../../settings/org.eclipse.core.resources.prefs
+#Wed Mar 31 21:03:30 CEST 2010
+eclipse.preferences.version=1
+encoding/<project>=UTF-8
