--- a/org.atomictagging.core/.classpath
+++ b/org.atomictagging.core/.classpath
@@ -3,6 +3,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="lib" path="lib/mysql-connector-java-5.1.12-bin.jar"/>
 	<classpathentry kind="lib" path="/org.atomictagging.libraries/lib/commons-configuration/commons-configuration-1.6.jar" sourcepath="/org.atomictagging.libraries/lib/commons-configuration/commons-configuration-1.6-sources.jar"/>
 	<classpathentry kind="lib" path="/org.atomictagging.libraries/lib/commons-lang/commons-lang-2.5.jar" sourcepath="/org.atomictagging.libraries/lib/commons-lang/commons-lang-2.5-sources.jar"/>
