Adjusted config to give an example of a remote repo

--- a/org.atomictagging.shell/atomictagging.conf
+++ b/org.atomictagging.shell/atomictagging.conf
@@ -1,5 +1,8 @@
 [base]
-dir = /home/tokei/.atomictagging
+dir = /home/<user>/.atomictagging
+
+[remote]
+remotetest = /home/<user>/at-remote-test
 
 [database]
 type = mysql
