--- a/org.atomictagging.ui/.settings/org.eclipse.pde.core.prefs
+++ b/org.atomictagging.ui/.settings/org.eclipse.pde.core.prefs
@@ -1,4 +1,4 @@
-#Wed Sep 22 20:51:23 CEST 2010
+#Sat Mar 13 20:56:05 CET 2010
 eclipse.preferences.version=1
 pluginProject.extensions=false
 resolve.requirebundle=false
